--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: eu-central-1
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -34,6 +34,6 @@ jobs:
           ECR_REPOSITORY: docker_nodejs_demo
           IMAGE_TAG: test-react-app
         run: |
-          docker build -t 609050058821.dkr.ecr.eu-west-2.amazonaws.com/react-app:v1.0 .
-          docker push 609050058821.dkr.ecr.eu-west-2.amazonaws.com/react-app:v1.0
-          echo ":: set-output name=image::609050058821.dkr.ecr.eu-west-2.amazonaws.com/react-app/deploy:latest"
+          docker build -t 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app:v1.0 .
+          docker push 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app:v1.0
+          echo ":: set-output name=image::609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app/deploy:latest"
