--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Amazon ECR/ECS
 
 on:
   push:
-    branches: [master, main, develop]
+    branches: [master, main]
   pull_request:
     branches: [master, main]
 
