--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,15 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: docker_nodejs_demo
+          ECR_REPOSITORY: react-app
           IMAGE_TAG: test-react-app
         run: |
           docker build -t 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app:v1.1 .
           docker push 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app:v1.1
           echo ":: set-output name=image::609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app/deploy:1.1"
+
+      - name: Remove old versions
+      - uses: LeiaInc/devops-delete-old-aws-ecr-images@v1
+        with:
+          repo-name: 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app
+          qtd-images: 2 
