--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: react-app
-          IMAGE_TAG: test-react-app
+          IMAGE_TAG: aws-react-app
         run: |
           docker build -t 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app:v1.1 .
           docker push 609050058821.dkr.ecr.eu-central-1.amazonaws.com/react-app:v1.1
